feat: add logout ability to invalidate tokens
